# Obsidian-Templater

./: Cargo.toml  README.md
src/: config.rs  helper.rs  main.rs  obsidian.rs
