[package]
name = "ovt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.18", features=["cargo", "derive"]}
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0"
confy = "0.6.0"
uuid = {version="1.7.0", features = ["v4"]}